--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -12,18 +12,36 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
         td {
             border: 1px solid black;
             padding: 8px;
+            text-align: center; /* Alinhamento Horizontal */
+            vertical-align: middle; /* Alinhamento Vertical */
+            font-size: 16px; /* Tamanho da Fonte */
+            font-weight: bold; /* Negrito */
+            color: rgb(0, 0, 0); /* Cor da Fonte */
+            background-color: white; /* Cor de Fundo */
+            text-decoration: none; /* Sublinhado */
+            text-transform: uppercase; /* Maiúsculo */
+            text-shadow: 1px 1px 1px black; /* Sombra */
+            letter-spacing: 2px; /* Espaçamento entre letras */
+            line-height: 20px; /* Altura da Linha */
+            word-spacing: 2px; /* Espaçamento entre palavras */
+            white-space: nowrap; /* Quebra de Linha */
+        }
+
+        .numero{
+            text-align: right;
         }
     </style>
 </head>
 
 <body>
-    <h1>Minha primeira Tabela</h1>
+    <h1>Minha Primeira Tabela</h1>
 
     <!-- HIERARQUIA DE TABELAS (SIMPLES)
     TABLE = TABELA
@@ -40,12 +58,12 @@
         <tr>
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr>
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr>
             <td>A4</td>
