--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -23,6 +23,7 @@
         table {
             width: 400px;
             border-collapse: collapse;
+            position: relative;
         }
 
         th,
@@ -34,6 +35,12 @@
         thead {
             background-color: black;
             color: white;
+        }
+
+        thead>tr>th {
+            position: sticky;
+            top: 0;
+            background-color: black;
         }
 
         tbody>tr:nth-child(2n) {
