--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudo de iframe</title>
+    <style>
+        iframe {
+            width: 400px;
+            height: 300px;
+        }
+    </style>
 </head>
+
 <body>
     <h1>Testando o uso de iframe</h1>
-    <p>Acessando o site do 
-    
-    <iframe src="https://www.cursoemvideo.com/" frameborder="0"></iframe>
+    <p>Acessando o site do
 
-    para aprender a programar</p>
+        <iframe src="https://www.cursoemvideo.com/" frameborder="1">
+            <a href="https://www.cursoemvideo.com/">curso em video</a>
+        </iframe>
+
+        para aprender a programar
+    </p>
 </body>
+
 </html>
