--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -20,7 +20,7 @@
     <h1>Teste de iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ducimus accusamus voluptas totam quisquam quos laboriosam amet molestiae non. Exercitationem quidem vero sequi reprehenderit perferendis quaerat at fugit assumenda ipsa?</p>
 
-    <iframe src="pag001.html" frameborder="1">
+    <iframe src="paginas-extras/pag001.html" frameborder="1">
         <p>Infelizmente seu navegador nao e compatível</p>
     </iframe>
 
