--- a/desafios/desafio015/index.html
+++ b/desafios/desafio015/index.html
@@ -10,10 +10,22 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                o seu navegador nao e compatível
+            </iframe>
         </section>
         <section id="redes-sociais">
+            <br><a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a></br>
 
+            <br><a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a></br>
+
+            <br><a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a></br>
+
+            <br><a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a></br>
+
+            <br><a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a></br>
+
+            <br><a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a></br>
         </section>
     </main>
 </body>
