--- a/desafios/desafio015/index.html
+++ b/desafios/desafio015/index.html
@@ -23,7 +23,7 @@
 
             <br><a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a></br>
 
-            <br><a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a></br>
+            <br><a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a></br>
 
             <br><a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a></br>
         </section>
