--- a/desafios/desafio016/index.html
+++ b/desafios/desafio016/index.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <main>
+        <h1>Bem-vindo ao nosso site!</h1>
+        <h2>Entre com a sua conta</h2>
+        <h2><i class="material-icons">arrow_downward</i></h2>
         <section id="login">
             <div id="imagem">
                 <!-- Aqui vai a imagem nas CSS -->
-
             </div>
             <div id="formulario">
-                <h1>Login</h1>
+                <h2>Login</h2>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar a sua conta e poder fazer as configurações no seu ambiente</p>
 
                 <form action="login.php" method="post" autocomplete="on">
@@ -25,13 +27,15 @@
                         <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
                         <label for="ilogin">Login</label>
                     </div>
+
                     <div class="campo">
                         <i class="material-icons">vpn_key</i>
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         <label for="isenha">Senha</label>
                     </div>
+
                     <input type="submit" value="Entrar">
-                    <a href="Esqueci.html">Esqueci a senha <i class="material-icons">mail</i></a>
+                    <a href="Esqueci.html" class="botao">Esqueci a senha</a>
                 </form>
             </div>
         </section>
