--- a/exercicios/ex027/flex006/index.html
+++ b/exercicios/ex027/flex006/index.html
@@ -10,7 +10,7 @@
 
             display: flex;
             flex-flow: row wrap;
-            align-items: flex-start;
+            align-items: flex-end;
             height: 400px;
         }
 
