--- a/caixa/index.html
+++ b/caixa/index.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 
-<body> <!-- Oi -->
+<body>
     <img id="imagem" src="imagens/happy.jpg"Imagem>
     
     <!-- Include SweetAlert2 JS -->
