--- a/desafios/desafio010/index.html
+++ b/desafios/desafio010/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Como surgiu o mascote Android?</title>
-    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon" /> <!-- Favicon -->
     <link rel="stylesheet" href="estilo/style.css" />
   </head>
-
   <body>
     <header>
       <h1>Curiosidades de Tecnologia</h1>
-      <p>
-        Tudo aquilo que você sempre quis saber o mundo Tech, em um único lugar
-      </p>
+      <p>Tudo aquilo que você sempre quis saber o mundo Tech, em um único lugar</p>
       <nav id="nav">
         <a href="#" id="home-link">Home</a>
         <a href="#" id="noticias-link">Notícias</a>
@@ -24,86 +21,43 @@
     <main>
       <article id="article">
         <h1>História do Mascote do Android</h1>
-        <p>
-          Provavelmente você sabe que o sistema operacional
-          <strong><em>Android</em></strong
-          >, mantido pelo <strong><em>Google</em></strong> é um dos mais
-          utilizados para dispositivos móveis em todo o mundo. Muito
-          provavelmente talvez você não saiba que o seu simpático mascote tem um
-          nome e uma história muito curiosa? Pois acompanhe esse artigo para
-          aprender muita coisa sobre esse robozinho.
-        </p>
+        <p>Provavelmente você sabe que o sistema operacional<strong><em>Android</em></strong>, 
+          mantido pelo <strong><em>Google</em></strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Muito
+          provavelmente talvez você não saiba que o seu simpático mascote tem um 
+          nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
         <h2>A primeira versão</h2>
-        <p>
-          A primeira tentativa de criar um mascote surgiu em 2007 e veio de um
-          desenvolvedor chamado
-          <a
-            href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/"
-            target="_blank"
-            class="externo"
-            >Dan Morrill</a
-          >. Ele conta que abriu o
-          <a
-            href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/"
-            target="_blank"
-            class="externo"
-            >Inkscape</a
-          >
-          (software livre para vetorização de imagens) e criou sua própria
-          versão de robô. O objetivo era apenas personificar o sistema apenas
-          para a sua equipe, não existia nenhuma solicitação da empresa para a
-          criação de um mascote.
-        </p>
+        <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado
+          <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" class="externo">
+            Dan Morrill</a>. Ele conta que abriu o <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" 
+            target="_blank" class="externo">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. 
+            O objetivo era apenas personificar o sistema apenas para a sua equipe, 
+            não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
         <picture>
           <source
             media="(max-width: 670px)"
-            srcset="imagens/dan-droids-pq.png"
-          />
-          <img src="imagens/dan-droids.png" alt="Primeiro Mascote do Android" />
+            srcset="imagens/dan-droids-pq.png"/> <!-- Imagem -->
+          <img src="imagens/dan-droids.png" alt="Primeiro Mascote do Android"/> <!-- Imagem -->
         </picture>
-        <p>
-          Essa primeira versão bizarra até foi batizada em homenagem ao seu
-          criador: seriam os <em><strong>Dandroids</strong></em
-          >.
-        </p>
+        <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <em><strong>Dandroids</strong></em>.</p>
         <h2>Surge um novo mascote</h2>
-        <p>
-          A ideia de ter um mascote foi amadurecendo e a missão foi passada para
-          uma profissional da área. A ilustradora Russa
-          <a
-            href="https://www.irinablok.com/android"
-            target="_blank"
-            class="externo"
-            >Irina Blok</a
-          >, também funcionária do Google, ficou com a missão de representar o
-          pequeno robô de uma maneira mais agradável.
-        </p>
+        <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa
+          <a href="https://www.irinablok.com/android" target="_blank" class="externo">Irina Blok</a>, 
+          também funcionária do Google, ficou com a missão de representar o
+          pequeno robô de uma maneira mais agradável.</p>
         <picture>
           <source
             media="(max-width: 670px)"
-            srcset="imagens/irina-blok-pq.jpg"
-          />
+            srcset="imagens/irina-blok-pq.jpg"/> <!-- Imagem -->
           <img
             src="imagens/irina-blok.jpg"
-            alt="Iriana Blok, criadora do Bugdroid"
-          />
+            alt="Iriana Blok, criadora do Bugdroid"/> <!-- Imagem -->
         </picture>
-        <p>
-          A ideia principal da Irina era representar tudo graficamente com
-          poucos traços e de forma mais chapada. O desenho também deveria gerar
-          identificação rápida com quem o olha. Surgiu então o
-          <em><strong>Bugdroid</strong></em
-          >, o novo mascote do Android.
-        </p>
-        <img src="imagens/bugdroid.png" class="pequena" alt="Bugdroid" />
-        <p>
-          A principal inspiração para os traços do novo
-          <strong><em>Bugdroid</em></strong> veio daqueles bonequinhos que
-          ilustram portas de banheiro para indicar o gênero de cada porta. Conta
-          a lenda que a artista estava riando em sua mesa no escritório do
-          <strong><em>Google</em></strong> e olhou para o lado dos banheiros e a
-          identificação foi imediata: simples, limpo, objetivo.
-        </p>
+        <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar 
+          identificação rápida com quem o olha. Surgiu então o <em><strong>Bugdroid</strong></em>, o novo mascote do Android.</p>
+        <img src="imagens/bugdroid.png" class="pequena" alt="Bugdroid" /> <!-- Imagem -->
+        <p>A principal inspiração para os traços do novo <strong><em>Bugdroid</em></strong> veio daqueles bonequinhos que ilustram portas de banheiro 
+          para indicar o gênero de cada porta. Conta a lenda que a artista estava riando em sua mesa no escritório do <strong><em>Google</em></strong> 
+          e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
         <div class="video">
           <iframe
             width="560"
@@ -118,21 +72,16 @@
         </div>
         <aside id="anside">
           <h3>Quer aprender mais?</h3>
-          <p>
-            Outro assunto curioso em relação ao Android é que cada versão sempre
-            foi nomeada em homenagem a um doce, em ordem alfabética a partir da
-            versão 1.5 até a 9.0.
-          </p>
-          <ul>
+          <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da
+            versão 1.5 até a 9.0.</p>
+          <ul> <!-- Lista -->
             <li>1.5 - <abbr title="Bolo de Copo">Cupcake</abbr></li>
             <li>1.6 - <abbr title="Rosquinha">Donut</abbr></li>
             <li>3.0 - <abbr title="Bomba">Eclair</abbr></li>
             <li>2.2 - <abbr title="Iogurte Congelado">Froyo</abbr></li>
             <li>2.3 - <abbr title="Biscoito de Gengibre">Gingerbread</abbr></li>
             <li>3.0 - <abbr title="Favo de Mel">Honeycomb</abbr></li>
-            <li>
-              4.0 - <abbr title="Sanduíche Congelado">Ice Cream Sandwich</abbr>
-            </li>
+            <li>4.0 - <abbr title="Sanduíche Congelado">Ice Cream Sandwich</abbr></li>
             <li>4.1 - <abbr title="Jujuba">Jelly Bean</abbr></li>
             <li>4.4 - <abbr title="KitKat">KitKat</abbr></li>
             <li>5.0 - <abbr title="Pirulito">Lolipop</abbr></li>
@@ -141,38 +90,17 @@
             <li>8.0 - <abbr title="Oreo">Oreo</abbr></li>
             <li>9.0 - <abbr title="Torta">Pie</abbr></li>
           </ul>
-
-          <p>
-            Infelizmente, o <strong><em>Android Q</em></strong> não existiu,
-            pois o Google resolveu pôr fim a essa divertida prática e começou a
-            usar numerações, o que deu origem ao Android 10.
-          </p>
-          <p>
-            Acesse aqui o site
-            <a
-              href="https://www.android.com/intl/en_uk/ history/"
-              target="_blank"
-              class="externo"
-              >Android History</a
-            >
-            para conhecer a sequência das versões "adocicadas" e o que cada uma
-            trouxe para o sistema Android.
-          </p>
+          <p>Infelizmente, o <strong><em>Android Q</em></strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a
+            usar numerações, o que deu origem ao Android 10.</p>
+          <p>Acesse aqui o site <a href="https://www.android.com/intl/en_uk/ history/" target="_blank" class="externo">Android History</a>
+            para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
         </aside>
-        <p id="final-paragraph">
-          Então é isso! Espero que você tenha gostado do nosso artigo com essa
-          curiosidade sobre o sistema
-          <strong><em>Android</em></strong> e seu simpático mascote.
-        </p>
+        <p id="final-paragraph">Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema
+          <strong><em>Android</em></strong> e seu simpático mascote.</p>
       </article>
     </main>
-    <footer id="footer">
-      <p>
-        Site criado por
-        <a href="https://github.com/gustavoguanabara">Gustavo Guanabara</a> para
-        o <a href="https://www.youtube.com/@CursoemVideo">Curso em Video</a>.
-      </p>
-    </footer>
+    <footer id="footer"><p>Site criado por <a href="https://github.com/gustavoguanabara">Gustavo Guanabara</a> para o 
+      <a href="https://www.youtube.com/@CursoemVideo">Curso em Video</a>.</p></footer>
     <script src="script.js"></script>
   </body>
 </html>
